@@ -179,25 +179,6 @@ METHODS
 
 ERRORS
      new():
-             From Mo::utils::check_array_object():
-                     Digital object isn't 'Data::OFN::DigitalObject' object.
-                             Value: %s
-                             Reference: %s
-                     Description isn't 'Data::Text::Simple' object.
-                             Value: %s
-                             Reference: %s
-                     Name isn't 'Data::Text::Simple' object.
-                             Value: %s
-                             Reference: %s
-                     Parameter 'attachment' must be a array.
-                             Value: %s
-                             Reference: %s
-                     Parameter 'description' must be a array.
-                             Value: %s
-                             Reference: %s
-                     Parameter 'name' must be a array.
-                             Value: %s
-                             Reference: %s
              From Mo::utils::check_isa():
                      Parameter 'created' must be a 'Data::OFN::Common::TimeMoment' object.
                              Value: %s
@@ -211,6 +192,27 @@ ERRORS
                      Parameter 'updated' must be a 'Data::OFN::Common::TimeMoment' object.
                              Value: %s
                              Reference: %s
+
+             From Mo::utils::Array::check_array_object():
+                     Parameter 'attachment' must be a array.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'attachment' with array must contain 'Data::OFN::DigitalObject' objects.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'description' must be a array.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'description' with array must contain 'Data::Text::Simple' objects.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'name' must be a array.
+                             Value: %s
+                             Reference: %s
+                     Parameter 'name' with array must contain 'Data::Text::Simple' objects.
+                             Value: %s
+                             Reference: %s
+
              From Mo::utils::Number::check_positive_natural():
                      Parameter 'id' must be a positive natural number.
                              Value: %s
@@ -331,7 +333,7 @@ EXAMPLE2
      # Invalidated: 2019-11-27T09:00:00
 
 DEPENDENCIES
-    Mo, Mo::utils, Mo::utils::IRI, Mo::utils::Number.
+    Mo, Mo::utils, Mo::utils::Array, Mo::utils::IRI, Mo::utils::Number.
 
 REPOSITORY
     <https://github.com/michal-josef-spacek/Data-OFN-Thing>
